--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ social-network-links:
 # youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-  linkedin: www.linkedin.com/in/diegozunblas/
+  linkedin: diegozunblas
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
