--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ author: Diego Zuniga
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Background:
+    - Academic: "Academic"
+    - Professional: "Professional"
+  Portfolio: "Portfolio"
 
 ################
 # --- Logo --- #
