--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ title-img: "./assets/img/Mountain_Logo.png"
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "diegoblassio9@hotmail.com"
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  rss: false  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
   github: Dblassio
 #  twitter: daattali
