--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-#title: Diego Zuniga
+title: 
 
 # Your name to show in the footer
 author: Diego Zuniga
