--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author: Diego Zuniga
 
 navbar-links:
   About Me: "aboutme"
-  Experience: "./docs/Experience/Professional"
+  Experience: ["Experience"](./docs/Experience/Professional.md")
   Education:
     - Actuarial Science: "Bachelor"
     - Data Science: "Data_Science"
