--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author: Diego Zuniga
 
 navbar-links:
   About Me: "aboutme"
-  Experience: [Experience](./docs/Experience/Professional.md)
+  Experience: <a href="./docs/Experience/Professional.md">Experience</a>
   Education:
     - Actuarial Science: "Bachelor"
     - Data Science: "Data_Science"
